gwt2 wip